Add tooltip tweaks

--- a/public/style.css
+++ b/public/style.css
@@ -34,15 +34,35 @@ select {
   vertical-align: middle;
 }
 
-div.tooltip {   
+div.tooltip {
   position: absolute;           
   text-align: center;           
   width: 60px;                  
   height: 28px;                 
   padding: 2px;             
-  font: 12px sans-serif;        
-  background: lightsteelblue;   
-  border: 0px;      
+  font: 20px sans-serif;        
+  background-color: blue;   
+  border: 0;      
   border-radius: 8px;           
   pointer-events: none;         
 }
+
+.player-name {
+   text-align: center;
+   font-size: 30px;
+}
+
+.popup {
+  font-size: 20px;
+}
+
+.popup-box {
+  background-color: #eee;
+  border: 1px solid #333;
+  padding: 10px;
+}
+
+
+
+
+
